# revpty

./: .gitignore  CLAUDE.md  README.md  build.sh  example.py  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
.qoder/specs/: http-tunnel-mapping.md  revpty-feature-enhancements.md
.trae/skills/release-builder/: SKILL.md
revpty/: __init__.cover  __init__.py  platform_utils.py
revpty/cli/: __init__.cover  __init__.py  attach.cover  attach.py  main.py
revpty/client/: __init__.cover  __init__.py  agent.cover  agent.py  file_manager.py  mux.py  pty_shell.cover  pty_shell.py  tunnel_proxy.py
revpty/protocol/: __init__.cover  __init__.py  codec.cover  codec.py  frame.cover  frame.py
revpty/server/: __init__.cover  __init__.py  app.cover  app.py  router.py  tunnel.py
revpty/server/static/: app.js  index.html  style.css  utils.js
revpty/session/: __init__.cover  __init__.py  buffer.py  manager.cover  manager.py
tests/: test_agent.cover  test_agent.py  test_attach_terminal.cover  test_attach_terminal.py  test_cli.py  test_file_manager.py  test_integration_attach.cover  test_integration_attach.py  test_new_features.py  test_protocol.cover  test_protocol.py  test_pty_shell.py  test_session_manager.cover  test_session_manager.py  test_tunnel_proxy.py
