[project]
name = "revpty"
version = "0.5.21"
description = "Reverse PTY shell over WebSocket"
authors = [{name = "ddmonster"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["aiohttp", "pywinpty>=2.0; sys_platform == 'win32'"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-timeout", "pytest-cov", "anyio"]

[project.scripts]
revpty-server = "revpty.cli.main:server"
revpty-client = "revpty.cli.main:client"
revpty-attach = "revpty.cli.main:attach_cmd"

[tool.setuptools.package-data]
revpty = ["server/static/*"]
